@@ -1,7 +1,12 @@
 = Unreleased =
+# Fixed
+- fixed label generation ajax error in order edit page 
+
+# Improved
+- added error message in order edit page, when label generation ajax got error
+
 # Updated
 - API library to 1.0.6.1
-- added error message in order edit page, when label generation ajax got error
 
 = 2.0.2 =
 # Fixed
